Adaptive learning: Allow creating and updating prerequisite competencies (#8765)