@@ -11,6 +11,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 import org.glassfish.jersey.internal.util.Producer;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,6 +27,7 @@ import de.tum.in.www1.artemis.AbstractSpringIntegrationLocalCILocalVCTest;
 import de.tum.in.www1.artemis.StudentScoreUtilService;
 import de.tum.in.www1.artemis.competency.CompetencyProgressUtilService;
 import de.tum.in.www1.artemis.competency.CompetencyUtilService;
+import de.tum.in.www1.artemis.competency.PrerequisiteUtilService;
 import de.tum.in.www1.artemis.competency.StandardizedCompetencyUtilService;
 import de.tum.in.www1.artemis.course.CourseUtilService;
 import de.tum.in.www1.artemis.domain.Course;
@@ -43,6 +45,7 @@ import de.tum.in.www1.artemis.domain.competency.Competency;
 import de.tum.in.www1.artemis.domain.competency.CompetencyProgress;
 import de.tum.in.www1.artemis.domain.competency.CompetencyRelation;
 import de.tum.in.www1.artemis.domain.competency.CompetencyTaxonomy;
+import de.tum.in.www1.artemis.domain.competency.CourseCompetency;
 import de.tum.in.www1.artemis.domain.competency.RelationType;
 import de.tum.in.www1.artemis.domain.enumeration.DifficultyLevel;
 import de.tum.in.www1.artemis.domain.enumeration.ExerciseMode;
@@ -65,6 +68,7 @@ import de.tum.in.www1.artemis.repository.ExerciseRepository;
 import de.tum.in.www1.artemis.repository.ExerciseUnitRepository;
 import de.tum.in.www1.artemis.repository.LectureRepository;
 import de.tum.in.www1.artemis.repository.LectureUnitRepository;
+import de.tum.in.www1.artemis.repository.PrerequisiteRepository;
 import de.tum.in.www1.artemis.repository.ResultRepository;
 import de.tum.in.www1.artemis.repository.SubmissionRepository;
 import de.tum.in.www1.artemis.repository.TextUnitRepository;
@@ -121,6 +125,9 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     private CompetencyRelationRepository competencyRelationRepository;
 
     @Autowired
+    private PrerequisiteRepository prerequisiteRepository;
+
+    @Autowired
     private LectureUnitRepository lectureUnitRepository;
 
     @Autowired
@@ -137,6 +144,9 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
 
     @Autowired
     private CompetencyUtilService competencyUtilService;
+
+    @Autowired
+    private PrerequisiteUtilService prerequisiteUtilService;
 
     @Autowired
     private PageableSearchUtilService pageableSearchUtilService;
@@ -938,9 +948,13 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
 
             assertThat(competencyDTOList).hasSize(2);
-            // competency 2 should be the tail of one relation
-            assertThat(competencyDTOList.get(0).tailRelations()).isNull();
-            assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
+            // assert that only one of the DTOs has the relation connected
+            if (competencyDTOList.getFirst().tailRelations() == null) {
+                assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
+            }
+            else {
+                assertThat(competencyDTOList.get(1).tailRelations()).isNull();
+            }
 
             competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course3.getId() + "?importRelations=false", null,
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
@@ -1072,6 +1086,24 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             final var search = pageableSearchUtilService.configureCompetencySearch(competency.getTitle(), "", "", "");
             final var result = request.getSearchResult("/api/competencies/for-import", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
             assertThat(result.getResultsOnPage()).hasSize(1);
+        }
+    }
+
+    @Nested
+    class GetCourseCompetencyTitles {
+
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
+        void shouldGetCourseCompetencyTitles() throws Exception {
+            competencyUtilService.createCompetencies(course, 5);
+            var competencyTitles = competencyRepository.findAllForCourse(course.getId()).stream().map(CourseCompetency::getTitle).toList();
+            prerequisiteUtilService.createPrerequisites(course, 5);
+            var prerequisiteTitles = prerequisiteRepository.findAllByCourseIdOrderById(course.getId()).stream().map(CourseCompetency::getTitle).toList();
+            var expectedTitles = Stream.concat(competencyTitles.stream(), prerequisiteTitles.stream()).toList();
+
+            final var actualTitles = request.getList("/api/courses/" + course.getId() + "/competencies/titles", HttpStatus.OK, String.class);
+
+            assertThat(actualTitles).containsAll(expectedTitles);
         }
     }
 }
